--- a/css/Basic/grid.css
+++ b/css/Basic/grid.css
@@ -1,6 +1,46 @@
 .container{
     display: grid;
-    grid-template-columns: 200px 200px  ;
+    height: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(100px 1fr));
+    grid-template-rows: repeat(1, 1fr);
+    grid-auto-rows: 1fr;
+}
+
+
+
+
+
+
+
+
+.container1{
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(12 ,1fr);
+    grid-template-rows: 50px auto 50px ;
+}
+.header{
+    grid-column: 1/-1;
+}
+.footer{
+    grid-column: 1/ -1;
+
+}
+
+
+
+
+
+
+
+
+
+.container2{
+    display: grid;
+    grid-template-columns: repeat(3,1fr) ;
+    grid-template-rows: repeat(3,1fr) ;
+    grid-gap: 5px;
+    
     
 
 }
