--- a/css/Basic/chapter3.css
+++ b/css/Basic/chapter3.css
@@ -1,3 +1,25 @@
+
+
+:root {
+    box-sizing: border-box;
+    }
+*,
+::before,
+::after {
+box-sizing: inherit;
+}
+.third-party-component{
+    box-sizing: content-box;
+}
+
+header {
+    padding: 1em 1.5em;
+    color: #fff;
+    background-color: #0072b0;
+    border-radius: .5em;
+}
+
+
 body {
     background-color: #eee;
     font-family: Helvetica, Arial, sans-serif;
@@ -7,20 +29,55 @@ body {
     background-color: #0072b0;
     border-radius: .5em;
     }
-
-main{
-    display: block;
+.wrapper{
+    margin-left: -1.5em;
+    margin-right: -1.5em;
 }
+
+.container{
+    display: flex;
+    width: 100%;
+    border-spacing: 1.5em 0;
+}
+
+
 .main {
-    float: left;
     width: 70%;
+    padding: 1em 1.5em;
     background-color: #fff;
     border-radius: .5em;
     }
-.sidebar{
-    float: left;
+    .sidebar {
     width: 30%;
     padding: 1.5em;
+    margin-top: 0;
+    margin-left: 1.5em;
     background-color: #fff;
-    border-radius:  .5rem;
+    border-radius: .5em;
+    }
+
+
+
+.button-link {
+display: block;
+padding: 0.5em;
+color: #fff;
+background-color: #0090C9;
+text-align: center;
+text-decoration: none;
+text-transform: uppercase;
 }
+.button-link + .button-link {
+    margin-top: 1.5em;
+    }
+
+.sponsor-link {
+        display: block;
+        color: #0072b0;
+        font-weight: bold;
+        text-decoration: none;
+        }
+
+ body * + * {
+            margin-top: 1.5em;
+ }
