--- a/css/Basic/chapter5.css
+++ b/css/Basic/chapter5.css
@@ -1,20 +1,104 @@
 :root {
     box-sizing: border-box;
     }
-    *,
-    ::before,
-    ::after {
-    box-sizing: inherit;
+*,
+::before,
+::after {
+box-sizing: inherit;
     }
-    body {
+body {
     background-color: #709b90;
     font-family: Helvetica, Arial, sans-serif;
     }
-    body * + * {
+body * + * {
     margin-top: 1.5em;
     }
-    .container {
+.container {
     max-width: 1080px;
     margin: 0 auto;
     }
+
+
+.site-nav{
+    display: flex;
+    padding: .5em;
+    list-style-type: none;
+    background-color: aqua;
+    border-radius: .2em;
+    
+}
+.site-nav >li {
+    margin-top: 0;
+
+}
+
+.site-nav > li >a {
+    display: block;
+    padding: .5em 1em ;
+    background-color: #cc6b5a;
+    color: white;
+    text-decoration: none;
+}
+
+.site-nav > li + li{
+    margin-left: 1.5em;
+}
+
+.site-nav > .nav-right{
+    margin-left: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
