--- a/css/Basic/chapter8.css
+++ b/css/Basic/chapter8.css
@@ -1,65 +1,81 @@
-root {
+:root{
     box-sizing: border-box;
-    font-size: calc(1vw + 0.6em);
-    }
+    font-size: calc(1vm +0.6em);
+
+}
 *,
 *::before,
-*::after {
+*::after{
     box-sizing: inherit;
-    }
-body {
+}
+body{
     margin: 0;
-    font-family: Helvetica, Arial, sans-serif;
-    }
-a:link {
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+a:link{
     color: #1476b8;
     font-weight: bold;
     text-decoration: none;
-    }
-a:visited {
+}
+a:visited{
     color: #1430b8;
-    }
-a:hover {
+}
+
+a:hover{
     text-decoration: underline;
-    }
-a:active {
+}
+a:active{
     color: #b81414;
-    }
-.page-header {
+}
+.page-header{
     padding: 0.4em 1em;
     background-color: #fff;
-    }
-.title > h1 {
+}
+.title > h1{
     color: #333;
     text-transform: uppercase;
     font-size: 1.5rem;
     margin: 0.2em 0;
-    }
-.slogan {
+    
+}
+
+.slogran{
     color: #888;
     font-size: 0.875em;
     margin: 0;
-    }
-.hero {
+}
+.hero{
     padding: 2em 1em;
     text-align: center;
-    background-image: url(coffee-beans.jpg);
+    background-image: url(afif.jpg);
     background-size: 100%;
     color: #fff;
     text-shadow: 0.1em 0.1em 0.3em #000;
+}
+
+@media (min-width: 35em) {
+    .hero {
+    padding: 5em 3em;
+    font-size: 1.2rem;
+    background-image: url(afif.jpg);
     }
-main {
-    position: relative;
-    padding: 1em;
     }
-    .subtitle {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-    font-size: 0.875rem;
-    text-transform: uppercase;
+    @media (min-width: 50em) {
+    .hero {
+    padding: 7em 6em;
+    background-image: url(afif.jpg);
     }
-.menu-toggle {
-    position: absolute;
+    }
+
+
+
+.main{
+    padding: relative;
+
+}
+.manu-toggle{
+    position:absolute;
     top: -1.2em;
     right: 0.1em;
     border: 0;
@@ -71,52 +87,62 @@ main {
     text-indent: 5em;
     white-space: nowrap;
     overflow: hidden;
-    }
+}
 
-    .menu-toggle::after {
+.manu-toggle::after{
     position: absolute;
-    top: 0.2em;
-    left: 0.2em;
+    top:0.2;
+    left: 0.2;
     display: block;
     content: "\2261";
     text-indent: 0;
-    }
-    .menu-dropdown {
+}
+.manu-dropdown{
     display: none;
     position: absolute;
     right: 0;
     left: 0;
     margin: 0;
-    }
-    .menu.is-open .menu-dropdown {
+}
+
+
+
+.manu.is-open .menu-dropdown{
     display: block;
+}
+.subtitle{
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+}
+
+.nav-manu{
+    margin: 0;
+    padding-left: 0;
+    border: 1px solid #ccc;
+    list-style: none;
+    background-color: #000;
+    color: #fff;
+}
+.nav-menu > li+li{
+    border-top: 1px solid #ccc;
+}
+.nav-manu > li >a {
+    display: block;
+    padding: 0.8em 1em;
+    color: #fff;
+    font-weight: normal;
+
+}
+
+@media (min-width :560px){
+    .title>h1{
+        font-size: 2.25em;
+
     }
-
-nav-menu {
-margin: 0;
-padding-left: 0;
-border: 1px solid #ccc;
-list-style: none;
-background-color: #000;
-color: #fff;
+    
 }
-.nav-menu > li + li {
-border-top: 1px solid #ccc;
-}
-.nav-menu > li > a {
-display: block;
-padding: 0.8em 1em;
-color: #fff;
-font-weight: normal;
-}
-
-
-@media (min-width: 560px) {
-.title > h1 {
-font-size: 2.25rem;
-}
-}
-
 .title > h1 {
     color: #333;
     text-transform: uppercase;
@@ -127,39 +153,31 @@ font-size: 2.25rem;
     .title > h1 {
     font-size: 2.25rem;
     }
-}
+    }
 
-.page-header {
-padding: 0.4em 1em;
-background-color: #fff;
-}
-@media (min-width: 35em) {
-.page-header {
-padding: 1em;
-}
-}
-.hero {
-padding: 2em 1em;
-text-align: center;
-background-image: url(coffee-beans.jpg);
-background-size: 100%;
-color: #fff;
-text-shadow: 0.1em 0.1em 0.3em #000;
-}
-@media (min-width: 35em) {
-.hero {
-padding: 5em 3em;
-font-size: 1.2rem;
+    page-header {
+        padding: 0.4em 1em;
+        background-color: #fff;
+        }
+        @media (min-width: 35em) {
+        .page-header {
+        padding: 1em;
+        }
+        }
+@media (min-width:35em){
+    .hero{
+        padding: 5em 3em;
+        font-size: 1.2rem;
 
+    }
 }
+main{
+    padding: 1em;
 }
-main {
-padding: 1em;
-}
-@media (min-width: 35em) {
-main {
-padding: 2em 1em;
-}
+@media(min-width:35em){
+    main{
+        padding: 2em 1em;
+    }
 }
 
 @media (min-width: 35em) {
@@ -178,35 +196,56 @@ border: 0;
 padding: 0 1em;
 }
 .nav-menu > li {
-flex: 1;
+    flex: 1;
+    }
+    .nav-menu > li + li {
+    border: 0;
+    }
+    .nav-menu > li > a {
+    padding: 0.3em;
+    text-align: center;
+    }
+}    
+
+@media (min-width:35em)
+{
+    .row{
+        display: flex;
+        margin-left: -.75em;
+        margin-right: -.75em;
+    }
+
+    .column{
+        flex: 1;
+        margin-right: 0.75em;
+        margin-left: 0.75em;
+    }
 }
-.nav-menu > li + li {
-border: 0;
+
+@media (min-width: 50em) {
+    .page-header {
+    padding: 1em 4em;
+    }
+    }
+    @media (min-width: 50em) {
+    .hero {
+    padding: 7em 6em;
+    }
+    }
+    @media (min-width: 50em) {
+    main {
+    padding: 2em 4em;
+    }
+    }
+    @media (min-width: 50em) {
+    .nav-menu {
+    padding: 0 4em;
+    }
+    }
+
+@media(min-width:50em){
+    :root{
+        font-size: 1.125em;
+
+    }
 }
-.nav-menu > li > a {
-padding: 0.3em;
-text-align: center;
-}
-}
-
-
-@media (min-width: 35em) {
-.row {
-display: flex;
-margin-left: -.75em;
-margin-right: -.75em;
-}
-.column {
-flex: 1;
-margin-right: 0.75em;
-margin-left: 0.75em;
-}
-}
-
-
-
-
-
-
-
-
