--- a/css/Basic/chapter14.css
+++ b/css/Basic/chapter14.css
@@ -1,7 +1,45 @@
-body {
+button {
+    background-color: hsl(180, 50%, 50%);
+    border: 0;
+    color: white;
+    font-size: 1rem;
+    padding: .3em 1em;
+    transition-property: all;
+    transition-duration: 0.5s;
+    }
+    button:hover {
+    background-color: hsl(0, 50%, 50%);
+    border-radius: 1em;
+    }
+
+.container {
+        position: relative;
+        height: 30px;
+        }
+.box {
+        position: absolute;
+        left: 0;
+        height: 30px;
+        width: 30px;
+        background-color: hsl(130, 50%, 50%);
+        transition: all 1s linear;
+        /* transition: all 1s steps(3); */
+        }
+.container:hover .box {
+        left: 400px;
+        }
+
+
+
+
+
+
+
+
+.body {
     font-family: Helvetica, Arial, sans-serif;
     }
-    .dropdown__toggle {
+.dropdown__toggle {
     display: block;
     padding: 0.5em 1em;
 border: 1px solid hsl(280, 10%, 80%);
@@ -50,12 +88,36 @@ color: hsl(280, 25%, 10%);
     background-color: white;
     width: 10em;
     opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.2s linear,
-    visibility 0s linear 0.2s;
+    transition: opacity 0.2s linear;
     }
     .dropdown.is-open .dropdown__drawer {
     opacity: 1;
-    visibility: visible;
-    transition-delay: 0s;
     }
+
+
+    /* .dropdown__drawer {
+        position: absolute;
+        background-color: white;
+        width: 10em;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s linear,
+        visibility 0s linear 0.2s;
+        }
+        .dropdown.is-open .dropdown__drawer {
+        opacity: 1;
+        visibility: visible;
+        transition-delay: 0s;
+        } */
+
+/* .dropdown__drawer {
+            position: absolute;
+            background-color: white;
+            width: 10em;
+            height: 0;
+            overflow: hidden;
+            transition: height 0.3s ease-out;
+            }
+.dropdown.is-open .dropdown__drawer {
+            height: auto;
+            } */
