--- a/css/Basic/chapter15.css
+++ b/css/Basic/chapter15.css
@@ -23,7 +23,7 @@ body {
         background-color: background-color: hsl(200, 80%, 30%);
         background-image: radial-gradient(hsl(200, 80%, 30%),
         hsl(210, 80%, 20%));
-        color: white;
+        color: ;
         font-family: Raleway, Helvetica, Arial, sans-serif;
         line-height: 1.4;
         margin: 0;
